--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -22,3 +22,75 @@ body {
 
 /* STYLES */
 /* Write your CSS below */
+
+header {
+  Display :flex ;
+  justify-content: center;
+  align-items:center;
+  color: white;
+  font-size: 3em;
+  background-image: url("/images/apple-pie.jpg");
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+  position: relative;
+}
+
+#parent-container {
+  padding: 100px;
+  }
+
+h2 {
+  font-size: 1.6em;
+  padding-bottom: 25px;
+  font-weight: bold;
+
+}
+
+img {
+  display: block;
+  width: 500px;
+  margin: auto;
+  padding-top: 50px;
+}
+
+
+/* introdction */
+#intro {
+  font-size: 1.8em;
+  font-weight: lighter;
+  box-sizing: border-box;
+  width: 100%;
+  padding-bottom: 50px;
+  border-bottom: 3px solid lightslategray;
+  margin-bottom: 50px;
+  }
+
+
+/* ingredients*/
+
+ul {
+  list-style-type: none;
+  padding-left:15px;
+  font-size: 1.5em;
+}
+
+li:before {
+    content: '- ';
+ }
+
+#ingredients {
+  box-sizing: border-box;
+  width: 100%;
+  padding-bottom: 50px;
+  border-bottom: 3px solid lightslategray;
+  margin-bottom: 50px;
+}
+
+
+/*directions*/
+#p-directions {
+  padding-left:15px;
+  font-size: 1.5em;
+}
