--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -29,7 +29,7 @@ header {
   align-items:center;
   color: white;
   font-size: 3em;
-  background-image: url("/images/apple-pie.jpg");
+  background-image: url("/apple-pie/images/apple-pie.jpg");
   background-position: 0 0;
   background-size: cover;
   background-repeat: no-repeat;
